<resources>
    <string name="app_name">Gym club</string>

    <string name="unexpected_error">An unexpected error happened</string>
    <string name="network_error">Connection error</string>
    <string name="login_credential_error">Invalid username or password</string>
    <string name="username_already_used_error">Username already used</string>

    <string name="username_hint">Username</string>
    <string name="username_error">Invalid username</string>
    <string name="password_hint">Password</string>
    <string name="password_error">Invalid password</string>
    <string name="login_button">Log in</string>
    <string name="to_register_button">Create a new account</string>

    <string name="title_register">Register</string>
    <string name="register_button">Register</string>

    <string name="title_activity_home">Gym club</string>
    <string name="title_news">News</string>
    <string name="title_classes">Classes</string>
    <string name="title_video">Videos</string>
    <string name="title_settings">Settings</string>
    <string name="title_trainer">Trainer(s)</string>
    <string name="button_logout">Logout</string>


    <string name="class_number_of_seats">%s available seat(s)</string>
    <string name="full_class">Full</string>
    <string name="button_register_class">Register</string>
    <string name="button_register_class_full">Full</string>
    <string name="button_select_trainers">Select trainers</string>
    <string name="action_open_map">Map</string>
    
    <string name="action_send_email">Send email</string>
    <string name="action_send_sms">Send sms</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_class_details">ClassDetailsActivity</string>
    <string name="title_activity_video_list">VideoListActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_trainer_detail">TrainerDetailActivity</string>

</resources>
